[package]
name = "improv"
description = "An improvisational Actor Model"
categories = ["asynchronous", "concurrency"]
keywords = ["actor-model", "actors", "actor", "tokio", "rayon", "threading", "threads"]
version = "0.0.1"
authors = ["Khionu Sybiern <dev@khionu.net>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3.9"
futures = { package = "futures-preview", version = "0.3.0-alpha.18" }

[dependencies.tokio]
version = "0.2.0-alpha.4"
optional = true

[features]
tokio_impl = [ "tokio" ]
